name:                Haskell React Starter Kit
version:             0.1.0.0
synopsis:            servant, persistent, React.js
description:         
license:             MIT
license-file:        LICENSE
author:              Mikolaj Krawiec
maintainer:          mikowiec@yahoo.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable server
  main-is:             Main.hs
  other-modules:       Api
                     , App
                     , Models
  build-depends:       base >=4.8 && <4.9
                     , aeson
                     , monad-logger
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , servant
                     , servant-server
                     , string-conversions
                     , text
                     , transformers
                     , wai
                     , warp
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:      test
                     , src
  other-modules:       Api
                     , App
                     , Models
                     , AppSpec
  build-depends:       base >=4.8 && <4.9
                     , hspec
                     , aeson
                     , persistent
                     , monad-logger
                     , persistent-template
                     , persistent-sqlite
                     , transformers
                     , wai
                     , servant
                     , servant-client
                     , servant-server
                     , string-conversions
                     , warp
                     , http-client
                     , text
                     , mockery
  default-language:    Haskell2010
